products/core/gitops-promoter/templates/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: promoter-webhook-receiver
spec:
  parentRefs:
    - name: envoy-gateway-public
      namespace: envoy-gateway
      sectionName: web-https
  hostnames:
    - gitops-promoter.feddema.dev
  rules:
    - backendRefs:
        - name: promoter-webhook-receiver
          port: 3333
